MAVENOPTS env block append4