@@ -18,6 +18,7 @@ pipeline{
             --add-opens jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
             --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
             --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+            --add-opens jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
         '''.trim()
     }
 
